CHANGES
-------

Version 0.6 : In progress
-------------------------
02/11/2017 Added a guard for proper use of asynchronous generators.
           Must be wrapped by finalize().  For example:

           async def some_generator():
               ...
               yield

           async def coro():
               ...
               async with finalize(some_generator()) as agen:
                   async for item in agen:
                       ...

           Failure to do this results in a RuntimeError if any 
           asynchronous generators is iterated.

02/08/2017 New Kernel.run() method implementation.  It should be backwards
           compatible, but there are two new ways of using it:

               kernel = Kernel()
               ...
               # Run a coroutine with a timeout/deadline applied to it
               try:
                   result = kernel.run(coro, timeout=secs)
               except TaskTimeout:
                   print('Timed out')

               # Run all daemonic tasks through a single scheduling cycle
               # with no blocking
               kernel.run()

               # Run all daemonic tasks through a cycle, but specify a
               # timeout on internal blocking
               kernel.run(timeout=secs)
                
02/06/2017 New aside() function for launching a Curio task in an
           independent process.  For example:

           async def child(name, n):
               print('Hello from', name)
               for i in range(n):
                   print('name says', i)
                   await sleep(1)

           async def main():
               t = await aside(child, 'Spam', 10)   # Runs in subprocess
	       await t.join()

           run(main())

           In a nutshell, aside(coro, *args, **kwargs) creates a clean
	   Python interpreter and invokes curio.run(coro(*args,
	   **kwargs)) on the supplied coroutine.  The return value of
	   aside() is a Task object.  Joining with it returns the